--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html manifest="cache.manifest"><head>
-<title>PlayStation 4 7.55 1.3 MichaelCL13</title>
+<title>PlayStation 4 7.55 host 1.1 MichaelCL13</title>
 <style>
 html, body {
 background-image: url('img.jpg');
@@ -8,7 +8,7 @@ background-attachment: fixed;
 background-size:100%;
 background-repeat:no-repeat;
 background-color: #24272b;
-color:#1B978B;
+color:white;
 margin-top: 0px;
 margin-left: 0px;
 margin-right: 0px;
@@ -16,15 +16,15 @@ overflow: hidden;
 }
 h1 {
 text-shadow: 0.1em 0.1em 0.2em black;
-font-size:32px;
+font-size:25px;
 text-align:center;
-color:#3B9AAF;
+color:#3FA7EE;
 }
 .btn {
-background-color: #3D3D3D;
-color: #1B978B;
+background-color: transparent;
+color: white;
 width: 260px;
-height: 49px;
+height: 260px;
 padding-bottom: 5px;
 text-align: center;
 font-size: 20px;
@@ -38,99 +38,116 @@ border-top-width: 0px;
 border-left-width: 0px;
 transition-duration: 0.4s;
 cursor: pointer;
-border-radius: 10px;
+border-radius: 8px;
+}
+.btn2 {
+background-color: transparent;
+color: white;
+width: 125px;
+height: 125px;
+padding-bottom: 5px;
+text-align: center;
+font-size: 20px;
+margin-top: 8px;
+margin-bottom: 8px;
+margin-left: 8px;
+margin-right: 8px;
+border-bottom-width: 0px;
+border-right-width: 0px;
+border-top-width: 0px;
+border-left-width: 0px;
+transition-duration: 0.4s;
+cursor: pointer;
+border-radius: 8px;
 }
 .btn:hover {
-box-shadow: 0 5px 50px 0 #3B9AAF;
-background-color: #3B9AAF;
-color: white;
-    border-radius: 10px;
-}
+background-color: transparent;
 </style>
 <script>
-function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));document.getElementById="display:none";window.msgs.innerHTML="Instalando Cache en el navegador: " + Percent + "%";}
-function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Instalacion del Cache Finalizada ✔";},1000);setTimeout(function(){window.msgs.innerHTML="Ya puede desconectar la Internet y volver abrir el Navegador...";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
+function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));document.getElementById="display:none";window.msgs.innerHTML="Instalando Cache en el Navegador: " + Percent + "%";}
+function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Instalacion Completa del Cache ✔";},1000);setTimeout(function(){window.msgs.innerHTML="Ya puede Salir y desconectar la Internet y volver abrir el Navegador...";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
 document.cookie = 'kex=1';
 </script>
 </head>
-<h1 id=msgs>PlayStation 4 7.55 1.3 MichaelCL13</h1>
-<hr>
+<h1 id=msgs>PlayStation 4 7.55 host 1.1 MichaelCL13</h1>
 <br>
-<h1 style="font-size:28px;text-align:center;color:#3B9AAF;">Experimentará problemas de memoria insuficientes en el navegador (debe insistir)</h1>
+<br>
+<h1 style="font-size:28px;text-align:center;text-shadow: 0.1em 0.1em 0.2em #3FA7EE;color:gray">Experimentará problemas de memoria insuficientes en el navegador (debe insistir)</h1>
 <div style="text-align:center">
-<button class="btn" onmouseover="mainpayload1()" onmouseout="pagetitle()" onclick=load_goldhen()> goldHen v1.1 </button>
-<br>
-<h1 style="font-size:28px;text-align:center;color:#3B9AAF">PAYLOADS</h1>
-<button class="btn" onmouseover="dumper()" onmouseout="pagetitle()" onclick=load_dumper()> Dumper </button>
-<button class="btn" onmouseover="linux1gb()" onmouseout="pagetitle()" onclick=load_linux1gb()> Linux 1GB </button>
-<button class="btn" onmouseover="linux3gb()" onmouseout="pagetitle()" onclick=load_linux3gb()> Linux 3GB </button>
 <br>
 <br>
 <br>
 <br>
+<h1 style="font-size:28px;text-align:center;text-shadow: 0.1em 0.1em 0.2em black;color:white">Seleccione el Payload que desea usar</h1>
+<div style="text-align:center">
 <br>
 <br>
-<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_dumper()> <img src="dumper.png"></a></td>
+<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_hen213()> <img src="hen213b.png"></a></td>
+<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_dumper()> <img src="linux1gb.png"></a></td>
+<button class="btn" onmouseover="mainpayload1()" onmouseout="pagetitle()" onclick=load_goldhen()> <img src="goldhen.png"></a></td>
+<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_linux3gb()> <img src="linux3gb.png"></a></td>
+<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_backup()> <img src="backup.png"></a></td>
+<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_restore()> <img src="restore.png"></a></td>
 <br>
 <br>
-<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-</div>
-<h1 style="font-size:30px;text-align:center;margin-top: 20px;color:#3B9AAF;">Para todos los jugadores de PlayStation4 Pirata</a></h1>
+<br>
+<br>
 <br>
 <br>
 </div>
 <script>
-function mainpayload1(){
-document.getElementById("msgs").innerHTML = "Habilita los homebrew y de depuración, proporciona la instalación remota de paquetes, inicia un servidor FTP (puerto 2121) y más";
-}
-function dumper(){
-document.getElementById("msgs").innerHTML = "Cargue la payload del Dumper, luego inicie un juego para extraer el juego y su actualización a un dispositivo de almacenamiento USB con formato exFAT.";
-}
-function linux1gb(){
-document.getElementById("msgs").innerHTML = "Carga Linux desde un dispositivo de almacenamiento USB preparado. Deja Linux con 7 GB de RAM, ya que 1 GB se utilizará para gráficos.";
-}
-function linux3gb(){
-document.getElementById("msgs").innerHTML = "Carga Linux desde un dispositivo de almacenamiento USB preparado. Deja Linux con 5 GB de RAM, ya que se utilizarán 3 GB para gráficos.";
-}
 function pagetitle(){
-document.getElementById("msgs").innerHTML = "PlayStation 4 7.55 1.3 MichaelCL13";
+document.getElementById("msgs").innerHTML = "PS4 7.55 GoldHEN v1.0 host MichaelCL13";
 }
-
-for(var i=40; i<=79; i++){
-    var select = document.getElementById("tempC");
-    var option = document.createElement("OPTION");
-	select.options.add(option);
-	option.text = i;
-	option.value = i;
-}
-tempC.value=60;
 
 function load_goldhen(){
 
   var link = document.createElement('a');
         document.body.appendChild(link);
-        link.href = 'goldhen.html#f=goldhen-755';
+        link.href = 'goldhen.html#f=goldhen755.js';
         link.click();
 }
 function load_dumper(){
 
   var link = document.createElement('a');
         document.body.appendChild(link);
-        link.href = 'payload.html#f=app-dumper.js';
+        link.href = 'payload.html#f=dumper.js';
+        link.click();
+}
+function load_hen213b(){
+
+  var link = document.createElement('a');
+        document.body.appendChild(link);
+        link.href = 'payload.html#f=hen213b.js';
         link.click();
 }
 function load_linux1gb(){
 
   var link = document.createElement('a');
         document.body.appendChild(link);
-        link.href = 'payload.html#f=linux-1gb.js';
+        link.href = 'payload.html#f=linux1gb.js';
         link.click();
 }
 function load_linux3gb(){
 
   var link = document.createElement('a');
         document.body.appendChild(link);
-        link.href = 'payload.html#f=linux-3gb.js';
+        link.href = 'payload.html#f=linux3gb.js';
+        link.click();
+}
+function load_backup(){
+
+  var link = document.createElement('a');
+        document.body.appendChild(link);
+        link.href = 'payload.html#f=backup.js';
+        link.click();
+}
+function load_restore(){
+
+  var link = document.createElement('a');
+        document.body.appendChild(link);
+        link.href = 'payload.html#f=restore.js';
         link.click();
 }
 
