--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ border-radius: 8px;
 background-color: transparent;
 color: white;
 width: 125px;
-height: 125px;
+height: 130px;
 padding-bottom: 5px;
 text-align: center;
 font-size: 20px;
@@ -72,7 +72,7 @@ document.cookie = 'kex=1';
 <h1 id=msgs>PlayStation 4 7.55 host 1.1 MichaelCL13</h1>
 <br>
 <br>
-<h1 style="font-size:28px;text-align:center;text-shadow: 0.1em 0.1em 0.2em #3FA7EE;color:gray">Experimentará problemas de memoria insuficientes en el navegador (debe insistir)</h1>
+<h1 style="font-size:28px;text-align:center;text-shadow: 0.1em 0.1em 0.2em black;color:white">Experimentará problemas de memoria insuficientes en el navegador (debe insistir)</h1>
 <div style="text-align:center">
 <br>
 <br>
@@ -83,11 +83,17 @@ document.cookie = 'kex=1';
 <br>
 <br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_dumper()> <img src="dumper.png"></a></td>
+<br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_hen213()> <img src="hen213b.png"></a></td>
+<br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_dumper()> <img src="linux1gb.png"></a></td>
+<br>
 <button class="btn" onmouseover="mainpayload1()" onmouseout="pagetitle()" onclick=load_goldhen()> <img src="goldhen.png"></a></td>
+<br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_linux3gb()> <img src="linux3gb.png"></a></td>
+<br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_backup()> <img src="backup.png"></a></td>
+<br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_restore()> <img src="restore.png"></a></td>
 <br>
 <br>
