--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ document.cookie = 'kex=1';
 <br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_dumper()> <img src="dumper.png"></a></td>
 <br>
-<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_hen213()> <img src="hen213b.png"></a></td>
+<button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_hen213b()> <img src="hen213b.png"></a></td>
 <br>
 <button class="btn2" onmouseover="mainpayload2()" onmouseout="pagetitle()" onclick=load_dumper()> <img src="linux1gb.png"></a></td>
 <br>
