--- a/goldhen.html
+++ b/goldhen.html
@@ -263,14 +263,11 @@
     }
   }
 </script>
-<script src="webkit/utils.js"></script>
-<script src="webkit/int64.js"></script>
+<script src="utils.js"></script>
+<script src="int64.js"></script>
 <script>
 if (localStorage.getItem("jailbreak_webkit_exploit") === null) {
-  document.write("<script src=\"webkit/ps4.js\"><\/script>");
-} else {
-  document.write("<script src=\"webkit/ps4_mod.js\"><\/script>");
-}
+  document.write("<script src=\"ps4.js\"><\/script>");
 </script>
 <button id="input1" onfocus="handle2()" style="opacity: 0"></button>
 <button id="input2" style="opacity: 0"></button>
